--- a/leonardo_form_roudnyresl/templates/leonardo_form_roudnyresl/roudnyreslorders_form.html
+++ b/leonardo_form_roudnyresl/templates/leonardo_form_roudnyresl/roudnyreslorders_form.html
@@ -14,12 +14,6 @@
 #roudnyreslform textarea {
   resize: none;
 }
-#roudnyreslform .has-error .help-block, .dynamic-error {
-    padding: 10px;
-    position: absolute;
-    margin-left: 33%;
-    margin-top: -71px;
-}
 .bootstrap-select.btn-group .dropdown-menu .dropdown-header span {
     color: #404040;
     font-weight: bold;
@@ -62,6 +56,22 @@ input[type="file"] {
     border-radius: 4px;
     font-size: 13px;
     margin-top: 6px;
+}
+
+/* errors */
+#roudnyreslform .has-error .help-block, .dynamic-error {
+    padding: 10px;
+    position: absolute;
+    margin-left: 33%;
+    margin-top: -71px;
+}
+td ul.errorlist {
+    padding: 0;
+}
+td ul.errorlist li {
+    color: #a94442;
+    font-size: 12px;
+    margin-top: -7px;
 }
 </style>
 <div class="col-md-12">
