Fix link to image in email

--- a/leonardo_form_roudnyresl/templates/leonardo_form_roudnyresl/roudnyresl_email.html
+++ b/leonardo_form_roudnyresl/templates/leonardo_form_roudnyresl/roudnyresl_email.html
@@ -62,7 +62,7 @@
       <td style="text-align: left;padding: 8px">{{ product.tloustka }}</td>
       <td style="text-align: left;padding: 8px">{{ product.vyska }}</td>
       <td style="text-align: left;padding: 8px">{{ product.rozmer_motivu}}</td> 
-      <td style="text-align: left;padding: 8px"><a href="http://{{ site.domain }}/media/{{ product.soubor }}">/media/{{ product.soubor }}</a></td>
+      <td style="text-align: left;padding: 8px"><a href="http://{{ site.domain }}/media/{{ product.soubor }}">{{ site.domain }}/media/{{ product.soubor }}</a></td>
     </tr>
 {% endfor %}
 </table>
